--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -99,13 +99,28 @@ jobs:
           if-no-files-found: error
 
       - name: Deploy docs
-        if: ${{ github.ref == 'refs/heads/master' }}
+        # if: ${{ github.ref == 'refs/heads/master' }}
         run: |
           # Compress and upload the docs, only for master branch
           docs_out_dir="docs/_out" # Docs in ${docs_out_dir}/html
-          tar_file="${{ github.sha }}.tar.gz"
+          tar_file="${{ github.sha }}_ready.tar.gz"
           rm -rf ${tar_file}
           tar -C ${docs_out_dir} -czvf ${tar_file} html
-          gsutil cp ${tar_file} gs://open3d-docs/wait_for_wheels_${tar_file}
+          gsutil cp ${tar_file} gs://open3d-docs/${tar_file}
           echo "Docs archive uploaded to:"
-          echo "https://storage.googleapis.com/open3d-docs/wait_for_wheels_${tar_file}"
+          echo "https://storage.googleapis.com/open3d-docs/${tar_file}"
+
+      - name: Check wheels and ready documentation archive
+        # if: ${{ github.ref == 'refs/heads/master' }}
+        run: |
+            if [ $(gsutil ls gs://open3d-docs/${{ github.sha }}_ready* | wc -l)\
+                -eq 4 ]; then
+                echo "All wheels and docs available. Making docs ready."
+                # Remove all marker files: Note _ at end of pattern.
+                gsutil rm gs://open3d-docs/${{ github.sha }}_ready_*
+                # Rename docs archive:
+                gsutil mv gs://open3d-docs/${{ github.sha }}_ready.tar.gz
+                    gs://open3d-docs/${{ github.sha }}.tar.gz
+            else
+                echo "All wheels / docs not available yet."
+            fi
