--- a/.github/workflows/ubuntu-cuda.yml
+++ b/.github/workflows/ubuntu-cuda.yml
@@ -173,7 +173,7 @@ jobs:
   ready-docs:
     name: Ready docs archive
     runs-on: ubuntu-18.04
-    if: ${{ github.ref == 'refs/heads/master' }}
+    # if: ${{ github.ref == 'refs/heads/master' }}
     needs: [build-wheel]
     steps:
       - name: GCloud CLI setup
@@ -183,7 +183,18 @@ jobs:
           service_account_key: ${{ secrets.GCE_SA_KEY_GPU_CI }}
           project_id: ${{ secrets.GCE_DOCS_PROJECT }}
           export_default_credentials: true
-      - name: Rename documentation archive
+      - name: Check wheels and ready documentation archive
         run: |
-          export docs_tar_file="${{ github.sha }}.tar.gz"
-          util/ready_docs.sh
+            touch marker_file
+            gsutil cp marker_file gs://open3d-docs/${{ github.sha }}_ready_ubuntu
+            if [ $(gsutil ls gs://open3d-docs/${{ github.sha }}_ready* | wc -l)\
+                -eq 4 ]; then
+                echo "All wheels and docs available. Making docs ready."
+                # Remove all marker files: Note _ at end of pattern.
+                gsutil rm gs://open3d-docs/${{ github.sha }}_ready_*
+                # Rename docs archive:
+                gsutil mv gs://open3d-docs/${{ github.sha }}_ready.tar.gz
+                    gs://open3d-docs/${{ github.sha }}.tar.gz
+            else
+                echo "All wheels / docs not available yet."
+            fi
