--- a/cpp/open3d/ml/pytorch/CMakeLists.txt
+++ b/cpp/open3d/ml/pytorch/CMakeLists.txt
@@ -97,6 +97,7 @@ if (BUILD_CUDA_MODULE)
         pointnet/BallQueryKernel.cu
         pointnet/InterpolateKernel.cu
         pointnet/SamplingKernel.cu
+        pvcnn/TrilinearDevoxelizeKernel.cu
     )
 
     target_sources(open3d_torch_ops PRIVATE
@@ -109,6 +110,7 @@ if (BUILD_CUDA_MODULE)
         ../contrib/InterpolatePoints.cu
         ../contrib/Nms.cu
         ../contrib/RoiPoolKernel.cu
+        ../contrib/TrilinearDevoxelize.cu
     )
 endif()
 
