renamed registration kernel files, added get_info_matrix kernel and api codes, basic test

--- a/cpp/open3d/t/pipelines/CMakeLists.txt
+++ b/cpp/open3d/t/pipelines/CMakeLists.txt
@@ -3,8 +3,8 @@ add_subdirectory(kernel)
 add_library(tpipelines OBJECT $<TARGET_OBJECTS:tpipelines_kernel>)
 
 target_sources(tpipelines PRIVATE
-    kernel/ComputeTransform.cpp
-    kernel/ComputeTransformCPU.cpp
+    kernel/Registration.cpp
+    kernel/RegistrationCPU.cpp
     kernel/FillInLinearSystem.cpp
     kernel/FillInLinearSystemCPU.cpp
     kernel/RGBDOdometry.cpp
@@ -14,7 +14,7 @@ target_sources(tpipelines PRIVATE
 
 if (BUILD_CUDA_MODULE)
     target_sources(tpipelines PRIVATE
-        kernel/ComputeTransformCUDA.cu
+        kernel/RegistrationCUDA.cu
         kernel/FillInLinearSystemCUDA.cu
         kernel/RGBDOdometryCUDA.cu
         kernel/TransformationConverter.cu
