--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -178,7 +178,7 @@ jobs:
             python_version: 3.9
 
     env:
-      DEVELOPER_BUILD: ${{ github.event.inputs.developer_build }}
+      DEVELOPER_BUILD: ${{ github.event.inputs.developer_build || 'ON' }}
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2
