Helper functions for checking shape, dtype, device (#3953)

--- a/cpp/open3d/core/CMakeLists.txt
+++ b/cpp/open3d/core/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources(core PRIVATE
     ShapeUtil.cpp
     SizeVector.cpp
     Tensor.cpp
+    TensorCheck.cpp
     TensorKey.cpp
     TensorList.cpp
 )
