--- a/cpp/open3d/Open3D.h.in
+++ b/cpp/open3d/Open3D.h.in
@@ -103,6 +103,7 @@
 #include "open3d/t/pipelines/slam/Model.h"
 #include "open3d/utility/CPUInfo.h"
 #include "open3d/utility/Console.h"
+#include "open3d/utility/DataManager.h"
 #include "open3d/utility/Eigen.h"
 #include "open3d/utility/FileSystem.h"
 #include "open3d/utility/Helper.h"
