--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
-cmake_minimum_required(VERSION 3.19)
+cmake_minimum_required(VERSION 3.19.2)
 # If you're using Ubuntu 18.04, we suggest you install the latest CMake from the
-# official repository https://apt.kitware.com/.  CMake 3.19+ is required to
-# allow linking with OBJECT libraries, to prevent erroneous -gencode option
-# deduplication with CUDA, to simplify generator expressions for selecting
-# compile flags and setting global hardened link flags, and to parse JSON files
-# for downloading files from the open3d_downloads repository.
+# official repository https://apt.kitware.com/.  CMake 3.19+ is required to:
+# - allow linking with OBJECT libraries
+# - prevent erroneous -gencode option deduplication with CUDA
+# - simplify generator expressions for selecting compile flags and setting
+#   global hardened link flags
+# - parse JSON files for downloading files from the open3d_downloads repository
+# - use first-class language support for ISPC (3.19.2 patch release required)
 
 if (APPLE)
 set (CMAKE_OSX_DEPLOYMENT_TARGET "10.14" CACHE STRING
@@ -34,6 +36,7 @@ option(BUILD_PYTHON_MODULE        "Build the python module"                  ON 
 option(BUILD_CUDA_MODULE          "Build the CUDA module"                    OFF)
 option(BUILD_COMMON_CUDA_ARCHS    "Build for common CUDA GPUs (for release)" OFF)
 option(BUILD_CACHED_CUDA_MANAGER  "Build the cached CUDA memory manager"     ON )
+option(BUILD_ISPC_MODULE          "Build the ISPC module"                    ON )
 option(BUILD_GUI                  "Builds new GUI"                           ON )
 option(WITH_OPENMP                "Use OpenMP multi-threading"               ON )
 option(WITH_IPPICV                "Use Intel Performance Primitives"         ON )
@@ -144,6 +147,10 @@ if(LINUX_AARCH64)
 endif()
 
 # Catch a few incompatible build options
+if (LINUX_AARCH64 AND BUILD_ISPC_MODULE)
+    message(WARNING "ISPC module is not yet supported on ARM Linux")
+    set(BUILD_ISPC_MODULE OFF)
+endif()
 if (APPLE AND ENABLE_HEADLESS_RENDERING)
     message(WARNING "Headless rendering is not supported on Mac OS")
     set(ENABLE_HEADLESS_RENDERING OFF)
@@ -317,6 +324,36 @@ if(BUILD_CUDA_MODULE)
     endif()
 endif ()
 
+# ISPC language emulation support
+include(Open3DISPC)
+
+# Build ISPC module by default if ISPC is available
+if (BUILD_ISPC_MODULE)
+    include(Open3DFetchISPCCompiler)
+    open3d_fetch_ispc_compiler()
+
+    include(Open3DMakeISPCInstructionSets)
+    open3d_make_ispc_instruction_sets(ISPC_ISAS)
+    set(CMAKE_ISPC_INSTRUCTION_SETS ${ISPC_ISAS})
+
+    message(STATUS "Using ISPC instruction sets: ${CMAKE_ISPC_INSTRUCTION_SETS}")
+
+    option(ISPC_FORCE_LEGACY "Force legacy ISPC language emulation over first-class CMake support" OFF)
+    mark_as_advanced(ISPC_FORCE_LEGACY)
+    option(ISPC_PRINT_LEGACY_COMPILE_COMMANDS "Prints legacy compile commands on CMake configuration time" ON)
+    mark_as_advanced(ISPC_PRINT_LEGACY_COMPILE_COMMANDS)
+
+    open3d_ispc_enable_language(ISPC)
+
+    if (CMAKE_ISPC_COMPILER_ID STREQUAL "Intel" AND CMAKE_ISPC_COMPILER_VERSION VERSION_LESS "1.16")
+        message(FATAL_ERROR "ISPC 1.15 and older are not supported. Please upgrade to ISPC 1.16 or newer.")
+    endif()
+
+    if (NOT CMAKE_ISPC_COMPILER_ID)
+        message(FATAL_ERROR "Unknown ISPC compiler.")
+    endif()
+endif()
+
 # OS specific settings
 if(WIN32)
     # Windows defaults to hidden symbol visibility, override that
@@ -360,6 +397,10 @@ macro(add_source_group module_name)
     source_group("Header Files\\${module_name}" FILES ${MODULE_HEADER_FILES})
     file(GLOB MODULE_SOURCE_FILES "${module_name}/*.cpp")
     source_group("Source Files\\${module_name}" FILES ${MODULE_SOURCE_FILES})
+    file(GLOB MODULE_ISPC_HEADER_FILES "${module_name}/*.isph")
+    source_group("Header Files\\ISPC" FILES ${MODULE_ISPC_HEADER_FILES})
+    file(GLOB MODULE_ISPC_SOURCE_FILES "${module_name}/*.ispc")
+    source_group("Source Files\\ISPC" FILES ${MODULE_ISPC_SOURCE_FILES})
     file(GLOB MODULE_SHADER_FILES "${module_name}/*.glsl")
     source_group("Source Files\\Shader\\GLSL" FILES ${MODULE_SHADER_FILES})
     file(GLOB MODULE_MATERIAL_FILES "${module_name}/*.mat")
