Introduce initial ISPC language support

--- a/cpp/tests/utility/CMakeLists.txt
+++ b/cpp/tests/utility/CMakeLists.txt
@@ -3,6 +3,7 @@ target_sources(tests PRIVATE
     FileSystem.cpp
     Helper.cpp
     IJsonConvertible.cpp
+    ISAInfo.cpp
     Logging.cpp
     Timer.cpp
 )
