--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -27,10 +27,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-      - name: Maximize build space
-        run: |
-          source util/ci_utils.sh
-          maximize_ubuntu_github_actions_build_space
+      # - name: Maximize build space
+      #   run: |
+      #     source util/ci_utils.sh
+      #     maximize_ubuntu_github_actions_build_space
       - name: Docker build
         run: |
           .github/workflows/docker_build.sh 2-bionic
