${{ secrets.GCE_PROJECT }}

--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           GIT_HASH=$(git rev-parse --short HEAD)
           DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}:latest
-          GCLOUD_DOCKER_TAG=gcr.io/${GCE_PROJECT}/${DOCKER_TAG}
+          GCLOUD_DOCKER_TAG=gcr.io/${{ secrets.GCE_PROJECT }}/${DOCKER_TAG}
           echo "To tag"
           docker image tag ${DOCKER_TAG} ${GCLOUD_DOCKER_TAG}
           echo "To push"
