Introduce initial ISPC language support

--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -876,6 +876,8 @@ FILE_PATTERNS          = *.c \
                          *.cc \
                          *.cu \
                          *.cuh \
+                         *.ispc \
+                         *.isph \
                          *.cxx \
                          *.cpp \
                          *.c++ \
