--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -51,11 +51,37 @@ jobs:
           GCLOUD_DOCKER_TAG=gcr.io/${{ secrets.GCE_PROJECT }}/${DOCKER_TAG}
           docker image tag ${DOCKER_TAG} ${GCLOUD_DOCKER_TAG}
           docker push ${GCLOUD_DOCKER_TAG}
-      # - name: Docker cleanup
-      #   if: always()
-      #   run: |
-      #     GIT_HASH=$(git rev-parse --short HEAD)
-      #     DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
-      #     GCLOUD_DOCKER_TAG=gcr.io/${{ secrets.GCE_PROJECT }}/${DOCKER_TAG}
-      #     docker push ${GCLOUD_DOCKER_TAG}
-      #     gcloud container images delete ${GCLOUD_DOCKER_TAG}
+      - name: VM create
+          GIT_HASH=$(git rev-parse --short HEAD)
+          VM_NAME=open3d-ubuntu-cuda-gcloud-ci-2-bionic-${GIT_HASH}
+          gcloud compute instances create ${VM_NAME} \
+            --project open3d-dev \
+            --service-account="${{ secrets.GCE_GPU_CI_SA }}" \
+            --image-family common-cu110 \
+            --image-project deeplearning-platform-release \
+            --zone=us-east1-c \
+            --accelerator="count=2,type=nvidia-tesla-t4" \
+            --maintenance-policy=TERMINATE \
+            --machine-type=n1-standard-4 \
+            --metadata "install-nvidia-driver=True,proxy-mode=project_editors" \
+            --boot-disk-type=pd-ssd
+          sleep 90s # Wait for nvidia driver installation
+      - name: VM Docker run
+          gcloud compute ssh ${VM_NAME} \
+            --zone=us-east1-c \
+            --command "nvidia-smi"
+          gcloud compute ssh ${VM_NAME} \
+            --zone=us-east1-c \
+            --command "sudo docker run -it --rm ${GCE_DOCKER_TAG} cat hello.txt"
+      - name: VM delete
+          gcloud compute instances delete ${VM_NAME} \
+            --zone=us-east1-c \
+            --quiet
+      - name: Docker delete
+        if: always()
+        run: |
+          GIT_HASH=$(git rev-parse --short HEAD)
+          DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
+          GCLOUD_DOCKER_TAG=gcr.io/${{ secrets.GCE_PROJECT }}/${DOCKER_TAG}
+          docker push ${GCLOUD_DOCKER_TAG}
+          gcloud container images delete ${GCLOUD_DOCKER_TAG}
