--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -60,7 +60,7 @@ jobs:
             --service-account="${{ secrets.GCE_GPU_CI_SA }}" \
             --image-family common-cu110 \
             --image-project deeplearning-platform-release \
-            --zone=us-east1-c \
+            --zone=australia-southeast1-a \
             --accelerator="count=2,type=nvidia-tesla-t4" \
             --maintenance-policy=TERMINATE \
             --machine-type=n1-standard-4 \
@@ -70,16 +70,16 @@ jobs:
       - name: VM Docker run
         run: |
           gcloud compute ssh ${VM_NAME} \
-            --zone=us-east1-c \
+            --zone=australia-southeast1-a \
             --command "nvidia-smi"
           gcloud compute ssh ${VM_NAME} \
-            --zone=us-east1-c \
+            --zone=australia-southeast1-a \
             --command "sudo docker run -it --rm ${GCE_DOCKER_TAG} cat hello.txt"
       - name: VM delete
         if: always()
         run: |
           gcloud compute instances delete ${VM_NAME} \
-            --zone=us-east1-c \
+            --zone=australia-southeast1-a \
             --quiet
       - name: Docker delete
         if: always()
