--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -79,7 +79,7 @@ jobs:
             --command "nvidia-smi"
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=australia-southeast1-a \
-            --command "sudo docker run -i --rm ${GCE_DOCKER_TAG} cat hello.txt"
+            --command "sudo docker run -i --rm ${{ env.GCLOUD_DOCKER_TAG}} cat hello.txt"
       - name: VM delete
         if: always()
         run: |
@@ -89,8 +89,5 @@ jobs:
       - name: Docker delete
         if: always()
         run: |
-          GIT_HASH=$(git rev-parse --short HEAD)
-          DOCKER_TAG=open3d-ubuntu-cuda-gcloud-ci:2-bionic-${GIT_HASH}
-          GCLOUD_DOCKER_TAG=gcr.io/${{ secrets.GCE_PROJECT }}/${DOCKER_TAG}
-          docker push ${GCLOUD_DOCKER_TAG}
-          gcloud container images delete ${GCLOUD_DOCKER_TAG}
+          docker push ${{ env.GCLOUD_DOCKER_TAG}}
+          gcloud container images delete ${{ env.GCLOUD_DOCKER_TAG}}
