--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -70,6 +70,7 @@ jobs:
             --maintenance-policy=TERMINATE \
             --machine-type=n1-standard-4 \
             --boot-disk-type=pd-ssd \
+            --scopes=storage-rw \
             --metadata="install-nvidia-driver=True,proxy-mode=project_editors" \
           sleep 90s # Wait for nvidia driver installation
           gcloud compute ssh ${{ env.VM_NAME }} \
