Revert "what if we dont configure docker"
This reverts commit 15bed93af7bf77c34b50ec44b9f71d7e3bb9254a.

--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -52,6 +52,7 @@ jobs:
           .github/workflows/docker_build.sh 2-bionic
       - name: Docker push
         run: |
+          gcloud auth configure-docker
           docker image tag ${{ env.DOCKER_TAG }} ${{ env.GCLOUD_DOCKER_TAG }}
           docker push ${{ env.GCLOUD_DOCKER_TAG }}
       - name: VM create
