--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -67,10 +67,11 @@ jobs:
             --maintenance-policy=TERMINATE \
             --machine-type=n1-standard-4 \
             --boot-disk-type=pd-ssd \
-            --metadata=install-nvidia-driver=True,\
-                       proxy-mode=project_editors,\
-                       startup-script="sudo gcloud auth configure-docker"
+            --metadata="install-nvidia-driver=True,proxy-mode=project_editors"
           sleep 90s # Wait for nvidia driver installation
+          gcloud compute ssh ${{ env.VM_NAME }} \
+            --zone=australia-southeast1-a \
+            --command "sudo gcloud auth configure-docker"
       - name: VM Docker run
         run: |
           gcloud compute ssh ${{ env.VM_NAME }} \
