--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -57,21 +57,7 @@ jobs:
           docker push ${{ env.GCLOUD_DOCKER_TAG }}
       - name: VM create
         run: |
-          gcloud compute instances create ${{ env.VM_NAME }} \
-            --project open3d-dev \
-            --service-account="${{ secrets.GCE_GPU_CI_SA }}" \
-            --image-family common-cu110 \
-            --image-project deeplearning-platform-release \
-            --zone=australia-southeast1-a \
-            --accelerator="count=2,type=nvidia-tesla-t4" \
-            --maintenance-policy=TERMINATE \
-            --machine-type=n1-standard-4 \
-            --boot-disk-type=pd-ssd \
-            --metadata="install-nvidia-driver=True,proxy-mode=project_editors"
-          sleep 90s # Wait for nvidia driver installation
-          gcloud compute ssh ${{ env.VM_NAME }} \
-            --zone=australia-southeast1-a \
-            --command "sudo gcloud auth configure-docker"
+          .github/workflows/create_gcloud_vm.sh
       - name: VM Docker run
         run: |
           gcloud compute ssh ${{ env.VM_NAME }} \
