--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -75,6 +75,7 @@ jobs:
               --accelerator="count=2,type=nvidia-tesla-t4" \
               --maintenance-policy=TERMINATE \
               --machine-type=n1-standard-4 \
+              --boot-disk-size=64GB \
               --boot-disk-type=pd-ssd \
               --metadata="install-nvidia-driver=True,proxy-mode=project_editors"; do
             ((GCE_ZID = GCE_ZID + 1))
