use actual nvidia docker, test smi inside docker

--- a/.github/workflows/Dockerfile.ubuntu-cuda-gcloud
+++ b/.github/workflows/Dockerfile.ubuntu-cuda-gcloud
@@ -1,7 +1,6 @@
 # FROM must be called before other ARGS except for ARG BASE_IMAGE
 ARG BASE_IMAGE
-# FROM ${BASE_IMAGE}
-FROM ubuntu:20.04
+FROM ${BASE_IMAGE}
 
 # Miniconda requires bash as the default shell.
 SHELL ["/bin/bash", "-c"]
