--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -92,7 +92,7 @@ jobs:
             --command "sudo docker run -i --rm ${{ env.GCLOUD_DOCKER_TAG}} cat hello.txt"
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
-            --command "sudo docker run -i --rm ${{ env.GCLOUD_DOCKER_TAG}} nvidia-smi"
+            --command "sudo docker run -i --rm --gpus all ${{ env.GCLOUD_DOCKER_TAG}} nvidia-smi"
       - name: VM delete
         if: always()
         run: |
