standard format for multiline if else

--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -30,11 +30,16 @@ ENV BUILD_WHEEL=${BUILD_WHEEL}
 
 RUN echo "BUILD_WHEEL=${BUILD_WHEEL}"
 
-RUN if [ "${BUILD_WHEEL}" = "ON" ]; then \
-        echo "Build wheel: ON"; \
-    else \
-        echo "Build wheel: OFF"; \
-    fi
+RUN if [ "${BUILD_WHEEL}" = "ON" ] \
+    ; then \
+        echo "Build wheel: ON" \
+     && echo "Build wheel: ON line 2" \
+     && echo "Build wheel: ON line 3" \
+    ; else \
+        echo "Build wheel: OFF" \
+     && echo "Build wheel: OFF line 2" \
+     && echo "Build wheel: OFF line 3" \
+    ; fi
 
 RUN exit 1
 
