try with small container IV

--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -133,20 +133,20 @@ RUN apt-get update && apt-get install -y \
 RUN npm install -g yarn \
  && yarn --version
 
-# # Open3D repo
-# # Always keep /root/Open3D as the WORKDIR
-# COPY . /root/Open3D
-# WORKDIR /root/Open3D
+# Open3D repo
+# Always keep /root/Open3D as the WORKDIR
+COPY . /root/Open3D
+WORKDIR /root/Open3D
 
-# # Build python wheel
-# RUN if [ "${BUILD_WHEEL}" = "ON" ] \
-#     ;then \
-#         export NPROC=$(nproc) \
-#         && source /root/Open3D/util/ci_utils.sh \
-#         && build_pip_conda_package build_azure_kinect build_jupyter \
-#     ;else \
-#         echo "BUILD_WHEEL=${BUILD_WHEEL}, build Python wheel skipped." \
-#     ;fi
+# Build python wheel
+RUN if [ "${BUILD_WHEEL}" = "ON" ] \
+    ;then \
+        export NPROC=$(nproc) \
+        && source /root/Open3D/util/ci_utils.sh \
+        && build_pip_conda_package build_azure_kinect build_jupyter \
+    ;else \
+        echo "BUILD_WHEEL=${BUILD_WHEEL}, build Python wheel skipped." \
+    ;fi
 
 # # Build "all": C++ tests, pip wheel, examples, benchmarks
 # RUN if [ "${BUILD_ALL}" = "ON" ] \
