try with small container V

--- a/.github/workflows/Dockerfile.ubuntu-cuda
+++ b/.github/workflows/Dockerfile.ubuntu-cuda
@@ -148,27 +148,27 @@ RUN if [ "${BUILD_WHEEL}" = "ON" ] \
         echo "BUILD_WHEEL=${BUILD_WHEEL}, build Python wheel skipped." \
     ;fi
 
-# # Build "all": C++ tests, pip wheel, examples, benchmarks
-# RUN if [ "${BUILD_ALL}" = "ON" ] \
-#     ;then \
-#         mkdir build \
-#         && cd build \
-#         && cmake -DBUILD_SHARED_LIBS="${SHARED}" \
-#                  -DCMAKE_BUILD_TYPE=Release \
-#                  -DBUILD_LIBREALSENSE=ON \
-#                  -DBUILD_CUDA_MODULE=ON \
-#                  -DBUILD_COMMON_CUDA_ARCHS=ON \
-#                  -DBUILD_TENSORFLOW_OPS="${BUILD_TENSORFLOW_OPS}" \
-#                  -DBUILD_PYTORCH_OPS="${BUILD_PYTORCH_OPS}" \
-#                  -DBUILD_UNIT_TESTS=ON \
-#                  -DBUILD_BENCHMARKS=ON \
-#                  -DBUILD_EXAMPLES=ON \
-#                  .. \
-#         && make VERBOSE=1 -j$(nproc) \
-#         && make install-pip-package -j$(nproc) \
-#     ;else \
-#         echo "BUILD_ALL=${BUILD_ALL}, build all skipped." \
-#     ;fi
+# Build "all": C++ tests, pip wheel, examples, benchmarks
+RUN if [ "${BUILD_ALL}" = "ON" ] \
+    ;then \
+        mkdir build \
+        && cd build \
+        && cmake -DBUILD_SHARED_LIBS="${SHARED}" \
+                 -DCMAKE_BUILD_TYPE=Release \
+                 -DBUILD_LIBREALSENSE=ON \
+                 -DBUILD_CUDA_MODULE=ON \
+                 -DBUILD_COMMON_CUDA_ARCHS=ON \
+                 -DBUILD_TENSORFLOW_OPS="${BUILD_TENSORFLOW_OPS}" \
+                 -DBUILD_PYTORCH_OPS="${BUILD_PYTORCH_OPS}" \
+                 -DBUILD_UNIT_TESTS=ON \
+                 -DBUILD_BENCHMARKS=ON \
+                 -DBUILD_EXAMPLES=ON \
+                 .. \
+        && make VERBOSE=1 -j$(nproc) \
+        && make install-pip-package -j$(nproc) \
+    ;else \
+        echo "BUILD_ALL=${BUILD_ALL}, build all skipped." \
+    ;fi
 
 # # Compress ccache folder, move to / directory
 # RUN ccache -s \
