--- a/.github/workflows/ubuntu-cuda-gcloud.yml
+++ b/.github/workflows/ubuntu-cuda-gcloud.yml
@@ -84,6 +84,7 @@ jobs:
           exit $((GCE_ZID >= ${#GCE_ZONES[@]})) # 0 => success
       - name: VM Docker run
         run: |
+          gcloud compute os-login ssh-keys remove --key-file "${HOME}"/.ssh/google_compute_engine.pub
           gcloud compute ssh ${{ env.VM_NAME }} \
             --zone=${{ env.VM_ZONE }} \
             --command "sudo gcloud auth configure-docker"
